<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/icon_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/icon_cost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/icon_cost"
            app:srcCompat="@drawable/ic_cost"/>
            
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/cost"
            app:layout_constraintStart_toEndOf="@id/icon_cost"
            app:layout_constraintTop_toTopOf="parent">
            
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_edit"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/service_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/service_question"
            app:srcCompat="@drawable/ic_service"/>

        <TextView
            android:id="@+id/service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/how_was_the_service"
            app:layout_constraintStart_toStartOf="@id/cost"
            app:layout_constraintTop_toBottomOf="@id/cost"/>

        <RadioGroup
                android:id="@+id/option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/option_no"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/service_question"
                app:layout_constraintTop_toBottomOf="@id/service_question">

                <RadioButton
                    android:id="@+id/option_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal"/>

                <RadioButton
                    android:id="@+id/option_fifteen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok_15"/>

                <RadioButton
                    android:id="@+id/option_eighteen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/great_18"/>


                <RadioButton
                    android:id="@+id/option_twenty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amazing_20"/>

        </RadioGroup>

        <ImageView
            android:id="@+id/icon_roundup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/roundup_switch"
            app:layout_constraintTop_toTopOf="@id/roundup_switch"
            app:srcCompat="@drawable/ic_round_up"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/roundup_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Round up the tip?"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/option"
            app:layout_constraintTop_toBottomOf="@id/option"/>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="Calculate Tip"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/option"
            app:layout_constraintTop_toBottomOf="@id/roundup_switch"/>
        
        <TextView
            android:id="@+id/result_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/calculate_button"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            tools:text="Tip Amount:"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/result_exp"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            tools:text="Rp 10.000,00"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>



